--- a/vcpkg-configuration.json
+++ b/vcpkg-configuration.json
@@ -1,14 +1,8 @@
 {
+  "$schema": "https://raw.githubusercontent.com/microsoft/vcpkg-tool/main/docs/vcpkg-configuration.schema.json",
   "default-registry": {
     "kind": "git",
-    "baseline": "8f54ef5453e7e76ff01e15988bf243e7247c5eb5",
-    "repository": "https://github.com/microsoft/vcpkg"
-  },
-  "registries": [
-    {
-      "kind": "artifact",
-      "location": "https://github.com/microsoft/vcpkg-ce-catalog/archive/refs/heads/main.zip",
-      "name": "microsoft"
-    }
-  ]
+    "repository": "https://github.com/microsoft/vcpkg",
+    "baseline": "8f54ef5453e7e76ff01e15988bf243e7247c5eb5"
+  }
 }
