Modernise CMake configuration and add CMakePresets.json
- Bump minimum CMake version to 4.0 and require C++20 with no extensions
- Switch entirely to target‐centric commands:
  • PRIVATE compile features and options
  • Public include directory using BUILD_INTERFACE/INSTALL_INTERFACE
  • Private compile definitions for Windows (_WIN32_WINNT)
- Remove global add_compile_options/include_directories commands
- Consolidate Boost and OpenSSL find_package calls with CONFIG-mode targets
- Implement install() rules for the TwitchBot executable and headers
- Detect and cache vcpkg toolchain file (ENV{VCPKG_ROOT} or external/vcpkg)
- Set CMP0167 policy to silence legacy FindBoost warnings
- Add CMakePresets.json:
  • Configure preset “vs2022-x64” (Visual Studio 17 2022, x64)
  • Build presets “vs2022-x64-debug” and “vs2022-x64-release”
- Improve compiler warning levels (/W4 for MSVC, -Wall -Wextra -pedantic for others)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,40 +1,36 @@
-cmake_minimum_required(VERSION 4.00)
+cmake_minimum_required(VERSION 4.0)
 project(TwitchBot VERSION 0.1.0 LANGUAGES CXX)
 
-# ── Don’t generate the ZERO_CHECK target (optional)
+# ── Don’t re-generate ZERO_CHECK
 set(CMAKE_SUPPRESS_REGENERATION ON)
 
 # ── C++20, no extensions
-set(CMAKE_CXX_STANDARD     20)
+set(CMAKE_CXX_STANDARD         20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_EXTENSIONS   OFF)
+set(CMAKE_CXX_EXTENSIONS       OFF)
 
-# ── vcpkg manifest mode toolchain
+# ── vcpkg manifest-mode toolchain
 if (NOT DEFINED CMAKE_TOOLCHAIN_FILE)
   if (DEFINED ENV{VCPKG_ROOT}
       AND EXISTS "$ENV{VCPKG_ROOT}/scripts/buildsystems/vcpkg.cmake")
     set(CMAKE_TOOLCHAIN_FILE
         "$ENV{VCPKG_ROOT}/scripts/buildsystems/vcpkg.cmake"
-        CACHE FILEPATH "vcpkg toolchain file" FORCE
-    )
+        CACHE FILEPATH "" FORCE)
   elseif (EXISTS "${CMAKE_SOURCE_DIR}/external/vcpkg/scripts/buildsystems/vcpkg.cmake")
     set(CMAKE_TOOLCHAIN_FILE
         "${CMAKE_SOURCE_DIR}/external/vcpkg/scripts/buildsystems/vcpkg.cmake"
-        CACHE FILEPATH "vcpkg toolchain file" FORCE
-    )
+        CACHE FILEPATH "" FORCE)
   endif()
 endif()
 
 # ── Silence legacy FindBoost warning
 cmake_policy(SET CMP0167 NEW)
 
-# ── Pull in your manifest-mode ports
-find_package(boost_asio    CONFIG REQUIRED)
-find_package(boost_beast   CONFIG REQUIRED)
-find_package(boost_json    CONFIG REQUIRED)
-find_package(OpenSSL       REQUIRED)
+# ── Pull in manifest-mode ports
+find_package(Boost  REQUIRED COMPONENTS asio beast json)
+find_package(OpenSSL REQUIRED)
 
-# ── Source & header lists
+# ── Sources & headers
 set(TB_SOURCES
   src/config.cpp
   src/faceit_client.cpp
@@ -53,40 +49,47 @@ set(TB_HEADERS
   include/utils/timer.hpp
 )
 
-# ── Single executable target
+# ── Executable target
 add_executable(TwitchBot
   ${TB_SOURCES}
   ${TB_HEADERS}    # for IDE grouping
 )
 
-# ── Tell VS to launch this project on F5
-set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-             PROPERTY VS_STARTUP_PROJECT TwitchBot)
+# ── IDE startup project
+set_property(DIRECTORY PROPERTY VS_STARTUP_PROJECT TwitchBot)
 
-# ── Include paths so that #include "config.hpp" etc. just work
-target_include_directories(TwitchBot PUBLIC
-  $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
-  $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include/twitch_bot>
-  $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include/utils>
+# ── Public include interface
+target_include_directories(TwitchBot
+  PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:include>        # when installed
 )
 
+# ── Windows tweaks
 if (WIN32)
-  target_compile_definitions(TwitchBot
-    PRIVATE
-      _WIN32_WINNT=0x0A00
-  )
+  target_compile_definitions(TwitchBot PRIVATE _WIN32_WINNT=0x0A00)
 endif()
 
 # ── Compile settings
-target_compile_features(TwitchBot PUBLIC cxx_std_20)
+target_compile_features(TwitchBot PRIVATE cxx_std_20)
+
 if (MSVC)
-  target_compile_options(TwitchBot PRIVATE /bigobj)
+  target_compile_options(TwitchBot PRIVATE /bigobj /W4)
+else()
+  target_compile_options(TwitchBot PRIVATE -Wall -Wextra -pedantic)
 endif()
 
-# ── Link against vcpkg-provided targets
-target_link_libraries(TwitchBot PRIVATE
-  Boost::asio
-  Boost::beast
-  Boost::json
-  OpenSSL::SSL
+# ── Link against vcpkg targets
+target_link_libraries(TwitchBot
+  PRIVATE
+    Boost::asio
+    Boost::beast
+    Boost::json
+    OpenSSL::SSL
 )
+
+# ── Installation (optional)
+install(TARGETS TwitchBot
+  RUNTIME DESTINATION bin
+)
+install(DIRECTORY ${CMAKE_SOURCE_DIR}/include/ DESTINATION include)
