Adopt TOML config loader
### Config management overhaul
- Drop hand-rolled `.env` parser; switch to TOML-based config (config.toml)
- Add `config.example.toml` template and ignore the real `config.toml` in .gitignore
- Integrate tomlplusplus library:
  • New `env::Config::load(path)` and zero-arg overload
  • Strong error handling on parse or missing keys

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,6 @@ external/vcpkg/downloads/
 # ---------------------------------------------------------------------
 *.log
 *.tmp
+
+# ignore the real config
+/config.toml
