Refactor config loading into `env::Config` and simplify `main`
**Commit Description**
- **Moved** all “where’s the config file?” logic out of `main.cpp` into `env::Config::load()`, with two overloads:
  - `Config::load(path)` verifies existence then parses TOML
  - `Config::load()` auto-locates `config.toml` in the CWD (first) or falls back to the CMake-baked path
- **Removed** all platform-specific WinAPI code (`GetModuleFileNameW`, `DWORD`, `MAX_PATH`) and now use only portable `<filesystem>` for lookup
- **Consolidated** TOML parsing into `src/config.cpp` via a private `parseToml()` helper and `fetch_string()` to extract dotted keys
- **Updated** `include/config.hpp` to declare both `load(path)` and `load()` overloads, and moved `EnvError` there
- **Simplified** `src/main.cpp` to a minimal entrypoint that just does:
  ```cpp
  auto cfg = env::Config::load();
  TwitchBot bot{ /* … */ };
  bot.run();

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,8 +27,8 @@ endif()
 cmake_policy(SET CMP0167 NEW)
 
 # -- Pull in manifest-mode ports
-find_package(Boost  REQUIRED COMPONENTS asio beast json)
-find_package(OpenSSL REQUIRED)
+find_package(Boost       REQUIRED COMPONENTS asio beast json)
+find_package(OpenSSL     REQUIRED)
 find_package(tomlplusplus CONFIG REQUIRED)
 
 # -- Sources & headers
@@ -60,16 +60,16 @@ configure_file(
   @ONLY
 )
 
-# 3) Make sure TwitchBot can #include it
-target_include_directories(TwitchBot
-  PRIVATE
-    "${CMAKE_BINARY_DIR}/generated"
-)
-
 # -- Executable target
 add_executable(TwitchBot
   ${TB_SOURCES}
   ${TB_HEADERS}    # for IDE grouping
+)
+
+# 3) Make sure TwitchBot can #include the generated header
+target_include_directories(TwitchBot
+  PRIVATE
+    "${CMAKE_BINARY_DIR}/generated"
 )
 
 # -- IDE startup project
@@ -79,7 +79,9 @@ set_property(DIRECTORY PROPERTY VS_STARTUP_PROJECT TwitchBot)
 target_include_directories(TwitchBot
   PUBLIC
     $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
-    $<INSTALL_INTERFACE:include>        # when installed
+    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include/twitch_bot>
+    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include/utils>
+    $<INSTALL_INTERFACE:include>
 )
 
 # -- Windows tweaks
