Integrating FaceIT API

--- a/config.example.toml
+++ b/config.example.toml
@@ -1,3 +1,7 @@
+# --------- FACEIT DATA API ---------
+[faceit]
+api_key = ""
+
 # --------- TWITCH CHAT ---------
 [twitch.chat]
 # include the "oauth:" prefix
