Fixing FACEIT integration bugs

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -27,6 +27,7 @@ file(GLOB_RECURSE TB_HEADERS
 add_library(TwitchBotCore
   src/channel_store.cpp
   src/command_dispatcher.cpp
+  src/faceit_client.cpp
   src/config.cpp
   src/helix_client.cpp
   src/http_client.cpp
