--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -3,6 +3,7 @@
 add_library(TwitchBotCore
   src/channel_store.cpp
   src/command_dispatcher.cpp
+  src/faceit_client.cpp
   src/config.cpp
   src/helix_client.cpp
   src/http_client.cpp
