Refactor HelixClient and HTTPClient to conform with C++ Core Guidelines and switch to Glaze JSON
- Clean up helix_client.hpp and helix_client.cpp:
  - Add Doxygen‐style documentation and ASCII‐only characters
  - Hide free helpers (body builder, digit parser, date math) in a detail namespace
  - Mark all non‐throwing functions noexcept and inline constexpr where appropriate
  - Improve thread safety with minimal shared/exclusive lock scopes for token caching
  - Validate ISO-8601 input format exactly and parse via a pure C++ days-from-civil algorithm
- Switch JSON parsing from Boost.JSON to Glaze JSON:
  - Define inline constexpr JsonOpts in header
  - Use glz::read<JsonOpts> to honour custom options
- Replace GSL span with std::span (C++23) for HTTP header lists
- Tidy http_client.hpp/.cpp:
  - Use std::span, strong typedefs, consistent naming and formatting
  - Hide pool-key and error-message builders in the detail namespace
- Remove conditional compilation and extraneous dependencies; adopt modern C++23 style throughout

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,6 @@
 # -------------------------------------------------------------------------------
 # CMakeLists.txt (project root)
 # -------------------------------------------------------------------------------
-
-# If CMAKE_TOOLCHAIN_FILE is not already defined, use vcpkg's toolchain
-if (NOT DEFINED CMAKE_TOOLCHAIN_FILE AND
-    EXISTS "${CMAKE_SOURCE_DIR}/external/vcpkg/scripts/buildsystems/vcpkg.cmake")
-  set(CMAKE_TOOLCHAIN_FILE
-      "${CMAKE_SOURCE_DIR}/external/vcpkg/scripts/buildsystems/vcpkg.cmake"
-      CACHE STRING "Path to vcpkg toolchain file" FORCE)
-endif()
-
 cmake_minimum_required(VERSION 4.0)
 project(
   TwitchBot
@@ -17,27 +8,36 @@ project(
   LANGUAGES CXX
 )
 
-# -------------------------------------------------------------------------------
+#-------------------------------------------------------------------------------
+# If vcpkg manifest detected, load it
+#-------------------------------------------------------------------------------
+if (NOT DEFINED CMAKE_TOOLCHAIN_FILE AND
+    EXISTS "${CMAKE_SOURCE_DIR}/external/vcpkg/scripts/buildsystems/vcpkg.cmake")
+  set(CMAKE_TOOLCHAIN_FILE
+      "${CMAKE_SOURCE_DIR}/external/vcpkg/scripts/buildsystems/vcpkg.cmake"
+      CACHE STRING "Path to vcpkg toolchain file" FORCE)
+endif()
+
+#-------------------------------------------------------------------------------
 # Enforce C++23, no compiler extensions
-# -------------------------------------------------------------------------------
+#-------------------------------------------------------------------------------
 set(CMAKE_CXX_STANDARD      23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS    OFF)
 
-# -------------------------------------------------------------------------------
-# Silence legacy FindBoost warning
-# -------------------------------------------------------------------------------
-cmake_policy(SET CMP0167 NEW)
+#-------------------------------------------------------------------------------
+# On MSVC, enable the standard-conformant preprocessor
+#-------------------------------------------------------------------------------
+if (MSVC)
+  add_compile_options(/Zc:preprocessor)
+endif()
 
-# -------------------------------------------------------------------------------
-# Add subdirectories: lib (core) and app (executable)
-# -------------------------------------------------------------------------------
+#-------------------------------------------------------------------------------
+# Subdirectories
+#-------------------------------------------------------------------------------
 add_subdirectory(lib)
 add_subdirectory(app)
 
-# -------------------------------------------------------------------------------
-# On Visual Studio, set TwitchBotApp as the default startup project
-# -------------------------------------------------------------------------------
 if (MSVC)
   set_property(
     DIRECTORY PROPERTY VS_STARTUP_PROJECT TwitchBotApp
