--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -3,9 +3,10 @@
 # ------------------------------------------------------------------------------
 
 # -- Find third-party packages (via vcpkg manifest mode) -----------------------
-find_package(Boost        REQUIRED COMPONENTS asio beast json)
+find_package(Boost        REQUIRED COMPONENTS asio beast)
 find_package(OpenSSL      REQUIRED)
 find_package(tomlplusplus CONFIG REQUIRED)
+find_package(glaze        CONFIG REQUIRED)
 
 # -- Gather all public headers (for IDE grouping only) -------------------------
 file(GLOB_RECURSE TB_HEADERS
@@ -74,9 +75,9 @@ target_link_libraries(TwitchBotCore
   PUBLIC
     Boost::asio
     Boost::beast
-    Boost::json
     OpenSSL::SSL
     tomlplusplus::tomlplusplus
+    glaze::glaze
 )
 
 # -- Create an alias so downstream code can just do `TwitchBot::Core` -----------
