Refactor codebase for performance, safety and style consistency
- Config: tightened interfaces (I), explicit pre/postconditions, STL-only parsing, encapsulated parse logic
- ChannelStore: reserve buckets, reduce max_load_factor; switch to piecewise_emplace to avoid temporaries; mark add_channel/remove_channel/contains/get_alias/set_alias with TB_FORCE_INLINE; remove TB_RESTRICT on string_view parameters; static save buffers; use lock_guard for thread‐safety (Per, CP)
- IrcClient: swap flat_buffer for basic_flat_static_buffer for zero-alloc reads; add TB_FORCE_INLINE to send_line, send_buffers and ping_loop; underscore_style names; K&R brace style; precise comments (Per, NL)
- HttpClient: keep-alive pooled connections with flat_static_buffer; custom pmr handler allocator; single-strand composed operation; pre-reserve pools; mark connection::reset with TB_FORCE_INLINE (Per, CP)
- HelixClient: prebuilt token/target buffers; scratch strings; shared_mutex-protected token cache; in-place ISO8601 parse; mark parse_iso8601_ms TB_FORCE_INLINE; qualify parse_digits pointer with TB_RESTRICT; minimal exception handling (Per, CP, E)
- TwitchBot: bind all async work to a single strand; zero-alloc join/leave handlers via const_buffer arrays; explicit interfaces; unified error-handling in coroutines; consistent naming and layout (CP, I, E)
- Attributes: introduce TB_FORCE_INLINE and TB_RESTRICT macros (always-inline and restrict hints) in utils/attributes.hpp; applied to hot one-liners and raw pointer helpers to guide optimizer (Per)
- Applied C++ Core Guidelines (Per, CP, I, E, NL) throughout: zero-overhead abstraction, clear ownership, no heap allocations on hot paths, and consistent style

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -50,7 +50,7 @@ source_group(
 # -- Public include directories for consumers of TwitchBotCore -----------------
 #    1) lib/include/twitch_bot
 #    2) lib/include
-#    3) build/generated (for config_path.hpp)
+#    3) build/generated
 target_include_directories(TwitchBotCore
   PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/twitch_bot>
