Refactor IRC message parsing and dispatcher to zero-alloc hybrid model, integrate GSL types, and clean up style
- Hybrid tag model: inline scan for mod=1 and badges
- Added get_tag() and parameters() methods using gsl::span
- Applied gsl::narrow_cast for safe, zero-overhead narrowing
- Zero-alloc one-pass parser with TB_RESTRICT, Expects/Ensures
- Snake_case naming, K&R brace style, consistent include ordering
- Dispatcher: snake_case APIs, IrcMessage-based handlers, try_emplace, safe coroutine capture
- Added MS GSL

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -3,10 +3,11 @@
 # ------------------------------------------------------------------------------
 
 # -- Find third-party packages (via vcpkg manifest mode) -----------------------
-find_package(Boost        REQUIRED COMPONENTS asio beast)
-find_package(OpenSSL      REQUIRED)
-find_package(tomlplusplus CONFIG REQUIRED)
-find_package(glaze        CONFIG REQUIRED)
+find_package(Boost         REQUIRED COMPONENTS asio beast)
+find_package(OpenSSL       REQUIRED)
+find_package(tomlplusplus  CONFIG REQUIRED)
+find_package(glaze         CONFIG REQUIRED)
+find_package(Microsoft.GSL CONFIG REQUIRED)
 
 # -- Gather all public headers (for IDE grouping only) -------------------------
 file(GLOB_RECURSE TB_HEADERS
@@ -77,6 +78,7 @@ target_link_libraries(TwitchBotCore
     OpenSSL::SSL
     tomlplusplus::tomlplusplus
     glaze::glaze
+    Microsoft.GSL::GSL
 )
 
 # -- Create an alias so downstream code can just do `TwitchBot::Core` -----------
