--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,22 +1,5 @@
-# ------------------------------------------------------------------------------
-# lib/CMakeLists.txt - the core library (TwitchBotCore)
-# ------------------------------------------------------------------------------
+# lib/CMakeLists.txt — TwitchBotCore
 
-# -- Find third-party packages (via vcpkg manifest mode) -----------------------
-find_package(Boost         REQUIRED COMPONENTS asio beast)
-find_package(OpenSSL       REQUIRED)
-find_package(tomlplusplus  CONFIG REQUIRED)
-find_package(glaze         CONFIG REQUIRED)
-find_package(Microsoft.GSL CONFIG REQUIRED)
-
-# -- Gather all public headers (for IDE grouping only) -------------------------
-file(GLOB_RECURSE TB_HEADERS
-  CONFIGURE_DEPENDS
-  "${CMAKE_CURRENT_SOURCE_DIR}/include/*.hpp"
-  "${CMAKE_CURRENT_SOURCE_DIR}/include/*.h"
-)
-
-# -- Build the static library from your .cpp source files ----------------------
 add_library(TwitchBotCore
   src/channel_store.cpp
   src/command_dispatcher.cpp
@@ -27,16 +10,18 @@ add_library(TwitchBotCore
   src/twitch_bot.cpp
 )
 
-# -- On Windows, set _WIN32_WINNT for minimum Windows version ------------------
+file(GLOB_RECURSE TB_HEADERS
+  CONFIGURE_DEPENDS
+  "${CMAKE_CURRENT_SOURCE_DIR}/include/*.hpp"
+)
+
 if (WIN32)
-  # Target Windows 10 (_WIN32_WINNT=0x0A00)
   target_compile_definitions(TwitchBotCore
     PUBLIC
       _WIN32_WINNT=0x0A00
   )
 endif()
 
-# -- Tell IDEs that these header files belong to TwitchBotCore -> "Header Files"
 target_sources(TwitchBotCore
   PUBLIC
     ${TB_HEADERS}
@@ -48,29 +33,27 @@ source_group(
   FILES  ${TB_HEADERS}
 )
 
-# -- Public include directories for consumers of TwitchBotCore -----------------
-#    1) lib/include/twitch_bot
-#    2) lib/include
-#    3) build/generated
 target_include_directories(TwitchBotCore
   PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/twitch_bot>
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-    $<BUILD_INTERFACE:${CMAKE_BINARY_DIR}/generated>
     $<INSTALL_INTERFACE:include>
 )
 
-# -- Enforce C++20 on this target and any target that links to it --------------
-target_compile_features(TwitchBotCore PUBLIC cxx_std_20)
+target_compile_features(TwitchBotCore PUBLIC cxx_std_23)
 
-# -- Warning flags -------------------------------------------------------------
 if (MSVC)
   target_compile_options(TwitchBotCore PRIVATE /W4 /bigobj)
 else()
   target_compile_options(TwitchBotCore PRIVATE -Wall -Wextra -pedantic)
 endif()
 
-# -- Third-party linkage -------------------------------------------------------
+find_package(Boost         REQUIRED COMPONENTS asio beast)
+find_package(OpenSSL       REQUIRED)
+find_package(tomlplusplus  CONFIG REQUIRED)
+find_package(glaze         CONFIG REQUIRED)
+find_package(Microsoft.GSL CONFIG REQUIRED)
+
 target_link_libraries(TwitchBotCore
   PUBLIC
     Boost::asio
@@ -81,5 +64,4 @@ target_link_libraries(TwitchBotCore
     Microsoft.GSL::GSL
 )
 
-# -- Create an alias so downstream code can just do `TwitchBot::Core` -----------
 add_library(TwitchBot::Core ALIAS TwitchBotCore)
