--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,30 +1,28 @@
+# CMakeLists.txt (project root)
+
 cmake_minimum_required(VERSION 4.0)
-project(TwitchBot VERSION 0.1.0 DESCRIPTION "Twitch chat bot" LANGUAGES CXX)
-
-set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-
-set(CMAKE_CXX_CLANG_TIDY
-    clang-tidy
-    -p=${CMAKE_BINARY_DIR}
-    -warnings-as-errors=modernize-use-nullptr
-    -format-style=file
+project(TwitchBot
+  VERSION     0.1.0
+  DESCRIPTION "Twitch chat bot"
+  LANGUAGES   CXX
 )
 
-if (NOT DEFINED CMAKE_TOOLCHAIN_FILE
-    AND EXISTS "${CMAKE_SOURCE_DIR}/external/vcpkg/scripts/buildsystems/vcpkg.cmake")
-  set(CMAKE_TOOLCHAIN_FILE
-      "${CMAKE_SOURCE_DIR}/external/vcpkg/scripts/buildsystems/vcpkg.cmake"
+# export compile_commands.json for clang-tidy, language servers, etc
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+
+option(ENABLE_CLANG_TIDY "Run clang-tidy as part of the build" OFF)
+if (ENABLE_CLANG_TIDY)
+  set(CMAKE_CXX_CLANG_TIDY
+      "clang-tidy;-p=${CMAKE_BINARY_DIR};-fix;-fix-errors;-format-style=file"
       CACHE STRING "" FORCE)
 endif()
 
-set(CMAKE_CXX_STANDARD      23)
+# C++ standard
+set(CMAKE_CXX_STANDARD        23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_EXTENSIONS    OFF)
+set(CMAKE_CXX_EXTENSIONS      OFF)
 
-if (MSVC)
-  add_compile_options(/Zc:preprocessor)
-endif()
-
+# formatting helper target
 add_custom_target(format
   COMMAND clang-format -i --style=file
           ${CMAKE_SOURCE_DIR}/lib/src/*.cpp
@@ -35,9 +33,6 @@ add_custom_target(format
   WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
 )
 
+# subdirectories
 add_subdirectory(lib)
 add_subdirectory(app)
-
-if (MSVC)
-  set_property(DIRECTORY PROPERTY VS_STARTUP_PROJECT TwitchBotApp)
-endif()
