Set VS_DEBUGGER_WORKING_DIRECTORY to project root for TwitchBotApp

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -4,6 +4,12 @@ add_executable(TwitchBotApp
   main.cpp
 )
 
+if(MSVC)
+  set_target_properties(TwitchBotApp PROPERTIES
+    VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}"
+  )
+endif()
+
 target_link_libraries(TwitchBotApp
   PRIVATE TwitchBot::Core
 )
